# cfr-poker

./: .gitignore  MIDPOINT_REPORT_OUTLINE.md  README.md  _compare_cfr_subgame.py  _inspect_infoset_misses.py  build_native_solver.py  cfr_subgame_eval.out  pyproject.toml  run_residual_sweep.sh  run_subgame_experiments.sh  run_sweep_experiments.sh  tes.py  validate_reports.py
DRL_Project_Latex_Template (3)/: DRL_Project_Word_Template (1).docx  midpoint_report.tex
artifacts/: first_metrics_blueprint.json  first_metrics_blueprint_cfr_plus.json  first_metrics_report.json  first_metrics_tuned.json  smoke_blueprint.json  smoke_blueprint_cfr_plus.json  smoke_tuned.json
artifacts/game_instances/: kuhn_poker_players=2.openspiel
configs/: fine_buckets.json  first_metrics.json  mccfr_100k.json  mccfr_25k.json  midpoint_proper.json  residual_030.json  residual_045.json  smoke.json  subgame_nn.json  subgame_tabular.json  tag_heavy_015.json  tag_heavy_030.json  tag_heavy_045.json  tag_heavy_045_cfr_subgame.json
hulhe_bot/: __init__.py  abstract_game.py  baselines.py  bucketing.py  cards.py  cli.py  config.py  engine.py  evaluator.py  exact_posterior.py  exact_river_cfr.py  experiments.py  models.py  native_river.py  nn_rl.py  policy.py  rl.py  subgame.py  subgame_cfr.py  trainer.py  ui.py
native/: river_solver.cpp
poker-rl/: pyvenv.cfg
tests/: test_abstract_game.py  test_bucketing.py  test_engine.py  test_exact_posterior.py  test_exact_river_cfr.py  test_experiments.py  test_native_river.py  test_pipeline.py  test_subgame.py  test_subgame_cfr.py
